# resonant-engine

./: .coverage  .cursorrules  .env.backup  .env.backup_20251105_212526  .env.template  .gitignore  BACKEND_API_INTEGRATION_COMPLETE.md  CLAUDE.md  CURRENT_STATUS_CHECK.md  DOCKER_SETUP.md  Dockerfile.test  README.md  SETUP_INSTRUCTIONS.md  STATUS_CHECK.md  check_local_db.py  check_schema.py  debug_import.py  dependency_map.txt  docker-compose.yml  module_structure_report.txt  project_tree.html  project_tree.txt  project_tree_interactive.html  project_tree_viewer.html  pyproject.toml  pytest.ini  requirements.txt  reset_db_schema.py  resonant_total_chronicle_v5_expanded.html  setup_docker_dev.sh  test_context_assembler_simple.py  test_db_connection.py  test_intent_processor.py  test_sprint6_docker.sh  test_sprint6_factory_simple.py  test_sprint6_final.py  test_sprint6_infrastructure.py  test_sprint6_maximum_coverage.py  test_sprint6_minimal.py  test_sprint7_integration.py  (+1 more)
.github/: copilot-instructions.md
backend/: Dockerfile  README.md  __init__.py  requirements.txt
bridge/: README.md  README_SPRINT_4_5.md  __init__.py  claude_code_client.py  config_sprint_4_5.yaml  context_loader.py  daemon_config.json  intent_bridge.py  intent_classifier.py  intent_protocol.json.bak_20251029_171217  setup.py  test_integration.py
config/: performance_baselines.json
context_assembler/: __init__.py  config.py  factory.py  models.py  service.py  token_estimator.py
daemon/: README.md  __init__.py  com.resonant.daemon.plist  feedback_agent.py  hypothesis_trace.py  intent_watcher.sh  (+13 more)
(+843 files in other folders)
